Updated work-log, gitignore

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
     script(type='text/javascript').
       if (foo) bar(1 + 5)
   body
-    h1 Pug - node template engine
+    h1.background-color__valhalla.opaque-50 Pug - node template engine
     #container.col
       if youAreUsingPug
         p You are amazing
