Practiced scss, updated worklog

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,14 +6,12 @@ html(lang="en")
   head
     title= pageTitle
     script(type='text/javascript').
-      if (foo) bar(1 + 5)
   body
-    h1.background-color__valhalla.opaque-50 Pug - node template engine
-    #container.col
-      if youAreUsingPug
-        p You are amazing
-      else
-        p Get on it!
-      p.
-        Pug is a terse and simple templating language with a
-        strong focus on performance and powerful features. ewdfsafdfdffsdfdfsdfdn/
+    .color-sample__holder
+      .color-sample.background-color__valhalla.opaque-100
+      .color-sample.background-color__valhalla.opaque-75
+      .color-sample.background-color__valhalla.opaque-50
+      .color-sample.background-color__valhalla.opaque-25
+      .color-sample.background-color__valhalla.opaque-5
+      .color-sample.background-color__perfume.opaque-100
+      .color-sample.background-color__silvertree.opaque-100
