Layout development experiments

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,11 +4,39 @@ html(lang="en")
     title= pageTitle
     script(type='text/javascript').
   body
-    .color-sample__holder
-      .color-sample.background-color__valhalla.opaque-100
-      .color-sample.background-color__valhalla.opaque-75
-      .color-sample.background-color__valhalla.opaque-50
-      .color-sample.background-color__valhalla.opaque-25
-      .color-sample.background-color__valhalla.opaque-5
-      .color-sample.background-color__perfume.opaque-100
-      .color-sample.background-color__silvertree.opaque-100
+    .color-items__holder
+      .color-item
+        .color__sample.background-color__valhalla.opaque-100
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
+      .color-item
+        .color__sample.background-color__valhalla.opaque-75
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
+      .color-item
+        .color__sample.background-color__valhalla.opaque-50
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
+      .color-item
+        .color__sample.background-color__valhalla.opaque-25
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
+      .color-item
+        .color__sample.background-color__valhalla.opaque-5
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
+      .color-item
+        .color__sample.background-color__perfume.opaque-100
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
+      .color-item
+        .color__sample.background-color__silvertree.opaque-100
+        .color__description
+          p.color__name
+          p.color__hexadecimal-code
