--- a/src/scss/abcd.scss
+++ b/src/scss/abcd.scss
@@ -1,26 +1,34 @@
-$font-color: #452365;
 $color-list: (
     valhalla: #1F2041,
     perfume: #BC9CFF,
     silvertree: #6FCF97
 );
 
-.col {
-    color: $font-color;
-}
-
-.color-sample__holder {
+.color-items__holder {
     display: grid;
     grid-row: 7;
+    grid-column: 2;
     grid-gap: 20px;
+    width: 282px;
+    height: 100px;
+}
+
+.color-item {
+    display: grid;
+    grid-column: 2;
+    grid-gap: 40px;
     width: 100%;
     height: 100%;
 }
 
-.color-sample {
+.color-item__sample {
     width: 70px;
     height: 70px;
     border-radius: 6px;
+}
+
+.color-item__description {
+    height: 70px;
 }
 
 .background-color__valhalla {
