--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,41 +2,41 @@ doctype html
 html(lang="en")
   head
     title= pageTitle
-    script(type='text/javascript').
+    script(type=text/javascript).
   body
     .color-items__holder
       .color-item
         .color__sample.background-color__valhalla.opaque-100
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Dark Shade 100%
+          p.color__hex-code #1F2041
       .color-item
         .color__sample.background-color__valhalla.opaque-75
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Dark Shade 75%
+          p.color__hex-code #1F2041
       .color-item
         .color__sample.background-color__valhalla.opaque-50
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Dark Shade 50%
+          p.color__hex-code #1F2041
       .color-item
         .color__sample.background-color__valhalla.opaque-25
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Dark Shade 25%
+          p.color__hex-code #1F2041
       .color-item
         .color__sample.background-color__valhalla.opaque-5
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Dark Shade 5%
+          p.color__hex-code #1F2041
       .color-item
         .color__sample.background-color__perfume.opaque-100
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Purple
+          p.color__hex-code #BC9CFF
       .color-item
         .color__sample.background-color__silvertree.opaque-100
         .color__description
-          p.color__name
-          p.color__hexadecimal-code
+          p.color__name Green
+          p.color__hex-code #BC9CFF
