--- a/src/scss/abcd.scss
+++ b/src/scss/abcd.scss
@@ -13,9 +13,7 @@ $color-list: (
 }
 
 .color-item {
-    display: grid;
-    grid-column: 2;
-    grid-gap: 40px;
+    display:flex;
     width: 100%;
     height: 100%;
 }
@@ -27,6 +25,7 @@ $color-list: (
 }
 
 .color__description {
+    margin-left: 40px;
     width: 100px;
     height: 70px;
 }
