--- a/src/scss/abcd.scss
+++ b/src/scss/abcd.scss
@@ -25,9 +25,17 @@ $color-list: (
 }
 
 .color__description {
+    display: inherit;
     margin-left: 40px;
-    width: 100px;
-    height: 70px;
+    font-style: normal;
+    font-size: 19px;
+    line-height: 28px;
+    flex-direction: column;
+    justify-content: center;
+
+    p {
+        margin: 0;
+    }
 }
 
 .color__name {
