Refactored c&t page and types-mixin

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,6 +16,6 @@ block content
       +typeItems([
         {tagname: "H1", note: "This one is the sub-section or widget title"},
         {tagname: "H2", note: "Next one is the item title inside widgets"},
-        {tagname: "H3", note: "This is a label or CTA text"},
+        {tagname: "H3", note: "THIS IS A LABEL OR CTA TEXT"},
         {tagname: "Body", note: "This is the body text which is used for most of the design, like paragraphs, lists, etc."},
       ])
