--- a/src/pug/types.pug
+++ b/src/pug/types.pug
@@ -2,6 +2,6 @@ mixin typeItems(types=[])
   .type-items__holder
     each type in types
       .type-item
-        - var chosenTag = type.tagname === "Body" ? "p" : type.tagname
+        - var chosenTag = type.tagname === "Body" ? "p" : type.tagname.toLowerCase()
           #{chosenTag}.type-item__tagname #{type.tagname}
           #{chosenTag}.type-item__note #{type.note}
