--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,7 +5,7 @@ include logo.pug
 block content
   body
     header
-      +logotype
+      +logotype({wh: 48, opacity: .25, color: "#1F2041"})
     main
       +colorItems([
         {hexcode: "#1F2041", opaque: "opaque_100", name: "valhalla", pseudoname: "Dark Shade 100%"},
@@ -22,3 +22,4 @@ block content
         {tagname: "H3", note: "THIS IS A LABEL OR CTA TEXT"},
         {tagname: "Body", note: "This is the body text which is used for most of the design, like paragraphs, lists, etc."},
       ])
+    footer
