--- a/src/scss/ui-kit-colors.scss
+++ b/src/scss/ui-kit-colors.scss
@@ -1,9 +1,14 @@
 header {
   height: 145px;
   width: 100%;
+  padding: 30px 30px;
 }
 
 main {
   height: 100%;
   width: 100%;
+}
+
+footer {
+  height: 145px;
 }
