--- a/src/scss/ui-kit-colors.scss
+++ b/src/scss/ui-kit-colors.scss
@@ -1,12 +1,17 @@
+body {
+  margin: auto;
+}
+
 header {
-  height: 145px;
+  height: 85px;
   width: 100%;
-  padding: 30px 30px;
+  padding: 30px;
 }
 
 main {
-  height: 100%;
-  width: 100%;
+  display: grid;
+  padding: 0px 158px 0px 150px; 
+  justify-content: space-between;
 }
 
 footer {
