Changed folder order

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,6 @@
-include colors.pug
-include types.pug
-include logo.pug
+include ../components/ui-kit/colors/colors.pug
+include ../components/ui-kit/types/types.pug
+include ../components/logo/logo.pug
 
 block content
   body
