Refactored inputs scss

--- a/src/components/ui-kit/input/input.pug
+++ b/src/components/ui-kit/input/input.pug
@@ -2,7 +2,7 @@ mixin inputItems(inputs=[])
   each input in inputs
     .input
       .input__textbar
-        p.textbar_title #{input.title}
-        p.textbar_state #{input.state}
+        p.input__textbar_title #{input.title}
+        p.input__textbar_state #{input.state}
       .input__frame
         input(type=input.type placeholder=input.placeholder)
