--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -1,11 +1,21 @@
 @import "@variables";
 
 .input {
+  p {
+    margin-block: 20px 5px;
+  }
+
   &__textbar{
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    color: $valhalla;
+
     &_title {
-      color: $valhalla;
+      font-weight: 700;
     }
     &_state {
+      font-weight: 400;
       color: $valhalla;
       opacity: .5;
     }
@@ -13,9 +23,11 @@
 
   &__frame input {
     border-color: $valhalla;
+    border-radius: 4px;
     opacity: .25;
     width: 320px;
     height: 44px;
+    padding-left: 13px;
 
     &:hover,
     &:focus-within {
