--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -6,7 +6,17 @@ block content
     +headerItem()
     main
       +inputItems([
-        {type:"email", placeholder:"Email", title: "AAA", state: "SSS"},
-        {type:"date", placeholder:"ДД.ММ.ГГГГ", title: "AAA", state: "SSS"},
+        {
+          type: "email", 
+          placeholder: "Email", 
+          title: "TEXT FIELD",
+          state: "DEFAULT"
+        },
+        {
+          type: "text", 
+          placeholder: "This is pretty awesome", 
+          title: "TEXT FIELD", 
+          state: "HOVER / FOCUS"
+        }
       ])
       
