Inputs scss still under construction 3

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -7,16 +7,19 @@ block content
     main
       +inputItems([
         {
-          type: "email", 
-          placeholder: "Email", 
-          title: "TEXT FIELD",
-          state: "DEFAULT"
+          title: "text field",
+          state: "default",
+          type: "email",
+          placeholder: "Email"
         },
         {
-          type: "text", 
-          placeholder: "This is pretty awesome", 
-          title: "TEXT FIELD", 
-          state: "HOVER / FOCUS"
+          title: "text field",
+          state: "hover / focus",
+          placeholder: "This is pretty awesome"
+        },
+        {
+          title: "masked text field",
+          placeholder: "ДД.ММ.ГГГГ"
         }
       ])
       
