--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -8,6 +8,7 @@
   &__textbar{
     display: flex;
     justify-content: space-between;
+    text-transform: uppercase;
     font-size: 12px;
     color: $valhalla;
 
