--- a/src/components/ui-kit/header/header.pug
+++ b/src/components/ui-kit/header/header.pug
@@ -2,4 +2,4 @@ include ../../logo/logo.pug
 
 mixin headerItem()
   header.ui-kit
-    +logotype({wh: 48, opacity: .25, color: "#1F2041"})
+    +logotype({size: "48px", opacity: .25, color: "#1F2041"})
