Implemented width control of inpuns and dropdowns

--- a/src/components/ui-kit/input/input.pug
+++ b/src/components/ui-kit/input/input.pug
@@ -5,4 +5,4 @@ mixin inputItems( items=[] )
         p.input__textbar_title #{item.title}
         if item.state 
           p.input__textbar_state #{item.state}
-      input.input__frame( type=item.type placeholder=item.placeholder )
+      input.input__frame( class=`form-element-width_${item.width ? item.width : 100}` type=item.type placeholder=item.placeholder )
