--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -25,10 +25,9 @@ block content
       ])
       +dropdownItems([
         {
-          title: "text field",
-          state: "default",
-          type: "email",
-          placeholder: "Email"
+          title: "dropdown",
+          placeholder: "Сколько гостей",
+          width: 50
         }
       ])
       
