--- a/src/components/ui-kit/dropdown/dropdown.pug
+++ b/src/components/ui-kit/dropdown/dropdown.pug
@@ -5,4 +5,5 @@ mixin dropdownItems( items=[] )
         p.input__textbar_title #{item.title}
         if item.state 
           p.input__textbar_state #{item.state}
-      select.input__frame( type=item.type placeholder=item.placeholder )
+      select.input__frame(class=`form-element-width_${item.width ? item.width : 100}`)
+        option( selected hidden ) #{item.placeholder}
