--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -21,6 +21,17 @@ block content
         {
           title: "masked text field",
           placeholder: "ДД.ММ.ГГГГ"
+        },
+        {
+          title: "dropdown",
+          placeholder: "Сколько гостей",
+          dropdown: {
+            options: [
+              "взрослые",
+              "дети",
+              "младенцы"
+            ]
+          }
         }
       ])
       
