--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -25,6 +25,7 @@ block content
         {
           title: "dropdown",
           placeholder: "Сколько гостей",
+          width: 75,
           dropdown: {
             options: [
               "взрослые",
