--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -31,6 +31,7 @@
     padding: 0px 15px 0px 15px;
     outline: none;
     appearance: none;
+    width: inherit;
 
     &:hover,
     &:focus-within {
@@ -42,5 +43,19 @@
         opacity: .75;
       }
     }
+  }
+}
+
+.form-element-width {
+  &_100 {
+    width: 320px
+  }
+
+  &_75 {
+    width: 266px;
+  }
+
+  &_50 {
+    width: 150px
   }
 }
