Dropdown mixin is under construction 2

--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -13,6 +13,11 @@
   &__option {
   
     &_name {
+      color: $valhalla;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 15px;
       text-transform: uppercase;
     }
   }
