--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -35,12 +35,13 @@
 
     &:hover,
     &:focus-within {
-      &:placeholder-shown {
-        opacity: .5;
+      &::placeholder {
+        color: $valhalla;
       }
 
-      &::placeholder {
+      &:placeholder-shown {
         opacity: .75;
+        border: 1px solid rgba(31, 32, 65, .5);
       }
     }
   }
