Dropdown and input mixins is under construction 1

--- a/src/components/ui-kit/dropdown/dropdown.pug
+++ b/src/components/ui-kit/dropdown/dropdown.pug
@@ -1,5 +1,5 @@
 mixin dropdownItem( item )
-  .dropdown 
+  .dropdown.elem__border
     each option in item.options
       .dropdown__option
         p.dropdown__option_name #{option}
