--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -1,16 +1,16 @@
 @import "@variables";
 
 .dropdown {
-  border: 1px solid $valhalla;
+  position: relative;
+  top: -1px;
+  border: 1px solid rgba(31, 32, 65, .5);
   border-radius: 0px 0px 4px 4px;
-  box-sizing: border-box;
-  opacity: .25;
   padding: 0px 15px 0px 15px;
-  outline: none;
-  appearance: none;
+  background-color: transparent;
   width: inherit;
 
   &__option {
+    margin: auto;
   
     &_name {
       color: $valhalla;
