--- a/src/components/ui-kit/input/input.pug
+++ b/src/components/ui-kit/input/input.pug
@@ -2,11 +2,11 @@ include ../dropdown/dropdown.pug
 
 mixin inputItems( items=[] )
   each item in items
-    .input( class=`form-element-width_${item.width ? item.width : 100}` )
+    .input( class=`elem__width_${item.width ? item.width : 100}` )
       .input__textbar
         p.input__textbar_title #{item.title}
         if item.state 
           p.input__textbar_state #{item.state}
-      input.input__frame( disabled=item.dropdown ? true : false type=item.type placeholder=item.placeholder )
+      input.input__frame.elem__border( disabled=item.dropdown ? true : false type=item.type placeholder=item.placeholder )
       if item.dropdown
         +dropdownItem( item.dropdown )
