Dropdown and input mixins is under construction 3

--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -1,9 +1,8 @@
 @import "@variables";
 
 .dropdown {
-  position: relative;
-  top: -1px;
   border-radius: 0px 0px 4px 4px;
+  border-top: 0;
   padding: 0px 15px 0px 15px;
   width: inherit;
 
