--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -1,12 +1,14 @@
 @import "@variables";
 
 .input {
+  display: table;
+  border-collapse: collapse;
+
   p {
     margin-block: 20px 5px;
   }
 
   &__textbar{
-    display: flex;
     justify-content: space-between;
     text-transform: uppercase;
     font-size: 12px;
@@ -38,7 +40,8 @@
       }
 
       &:placeholder-shown {
-        opacity: .75;
+        opacity: 1;
+        text-decoration-color: rgba(31, 32, 65, .75);
         border: 1px solid rgba(31, 32, 65, .5);
       }
     }
