--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -1,8 +1,8 @@
 @import "@variables";
 
 .dropdown {
+  border-color: rgba(31, 32, 65, .5);
   border-radius: 0px 0px 4px 4px;
-  border-top: 0;
   padding: 0px 15px 0px 15px;
   width: inherit;
 
