--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -1,14 +1,12 @@
 @import "@variables";
 
 .input {
-  display: table;
-  border-collapse: collapse;
-
   p {
     margin-block: 20px 5px;
   }
 
   &__textbar{
+    display: flex;
     justify-content: space-between;
     text-transform: uppercase;
     font-size: 12px;
@@ -27,22 +25,24 @@
 
   &__frame {
     border-radius: 4px;
-    opacity: .25;
+    border-color: rgba(31, 32, 65, .25);
     height: 44px;
     padding: 0px 15px 0px 15px;
     width: inherit;
     background-color: transparent;
 
+    &::placeholder {
+      color: rgba(31, 32, 65, .25);
+    }
+
     &:hover,
     &:focus-within {
       &::placeholder {
-        color: $valhalla;
+        color: rgba(31, 32, 65, .75);
       }
 
       &:placeholder-shown {
-        opacity: 1;
-        text-decoration-color: rgba(31, 32, 65, .75);
-        border: 1px solid rgba(31, 32, 65, .5);
+        border-color: rgba(31, 32, 65, .5);
       }
     }
   }
@@ -50,7 +50,6 @@
 
 .elem {
   &__border {
-    border-color: rgba(31, 32, 65, .5);
     border-width: 1px;
     border-style: solid;
     box-sizing: border-box;
