--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -1,10 +1,14 @@
 @import "@variables";
 
 .dropdown {
+  position: relative;
+  top: -1px;
   border-color: rgba(31, 32, 65, .5);
+  border-top-color: transparent;
   border-radius: 0px 0px 4px 4px;
   padding: 0px 15px 0px 15px;
   width: inherit;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
   &__option {
     margin: auto;
