--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -45,6 +45,10 @@
         border-color: rgba(31, 32, 65, .5);
       }
     }
+
+    &:active {
+      border-radius: 4px 4px 1px 1px;
+    }
   }
 }
 
