Dropdown and input mixins is under construction 6

--- a/src/components/ui-kit/dropdown/dropdown.pug
+++ b/src/components/ui-kit/dropdown/dropdown.pug
@@ -2,7 +2,7 @@ mixin dropdownItem( item )
   .dropdown.elem__border
     each option in item.options
       .dropdown__option
-        p.dropdown__option_name #{option}
+        span.dropdown__option_name #{option}
         .dropdown__button_inc 
-        p.dropdown__counter 
+        span.dropdown__counter 
         .dropdown__button_dec
