--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -6,12 +6,15 @@
   border-color: rgba(31, 32, 65, .5);
   border-top-color: transparent;
   border-radius: 0px 0px 4px 4px;
-  padding: 0px 15px 0px 15px;
+  padding: 7px 7px 7px 15px;
   width: inherit;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
   &__option {
-    margin: auto;
+    display: flex;
+    align-items: center;
+    margin-bottom: 7px;
+    height: 30px;
   
     &_name {
       color: $valhalla;
