--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -1,16 +1,16 @@
 @import "@variables";
 
 .input {
-  p {
-    margin-block: 20px 5px;
-  }
-
   &__textbar{
     display: flex;
     justify-content: space-between;
     text-transform: uppercase;
     font-size: 12px;
     color: $valhalla;
+
+    & p {
+      margin-block: 20px 5px;
+    }
 
     &_title {
       font-weight: 700;
