Added appropriate fonts

--- a/src/components/ui-kit/colors/colors.scss
+++ b/src/components/ui-kit/colors/colors.scss
@@ -9,9 +9,10 @@
 }
 
 .color-item {
-  display:flex;
+  display: flex;
   width: 100%;
   height: 100%;
+  color: $valhalla;
 
   &__sample {
     width: 70px;
