--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -9,6 +9,7 @@
   padding: 7px 7px 7px 15px;
   width: inherit;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  display: none;
 
   &__option {
     display: flex;
@@ -27,6 +28,14 @@
   }
 }
 
-.dropdown-marker:active {
-  border-radius: 4px 4px 1px 1px;
+.dropdown-closed {
+  border-radius: 4px !important;
+}
+
+.dropdown-opened {
+  border-radius: 4px 4px 1px 1px !important;
+}
+
+.dropdown-shown {
+  display: block;
 }
