--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -1,8 +1,7 @@
 @import "@variables";
 
 .dropdown {
-  position: relative;
-  top: -1px;
+  position: absolute;
   border-color: rgba(31, 32, 65, .5);
   border-top-color: transparent;
   border-radius: 0px 0px 4px 4px;
@@ -10,6 +9,8 @@
   width: inherit;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   display: none;
+  background-color: #fff;
+  z-index: 10;
 
   &__option {
     display: flex;
