--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -1,6 +1,8 @@
 @import "@variables";
 
 .input {
+  position: relative;
+
   &__textbar{
     display: flex;
     justify-content: space-between;
@@ -72,5 +74,13 @@
 }
 
 .dropdown-is-opened {
-  border-radius: 4px 4px 1px 1px !important;
+  border-radius: 4px 4px 0px 0px !important;
+
+  &::placeholder {
+    color: rgba(31, 32, 65, .75);
+  }
+
+  &:placeholder-shown {
+    border-color: rgba(31, 32, 65, .5);
+  }
 }
