Minor css fixes 2

--- a/src/components/ui-kit/dropdown/dropdown.scss
+++ b/src/components/ui-kit/dropdown/dropdown.scss
@@ -2,8 +2,8 @@
 
 .dropdown {
   position: absolute;
+  top: 82px;
   border-color: rgba(31, 32, 65, .5);
-  border-top-color: transparent;
   border-radius: 0px 0px 4px 4px;
   padding: 7px 7px 7px 15px;
   width: inherit;
