--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -75,6 +75,7 @@
 
 .dropdown-is-opened {
   border-radius: 4px 4px 0px 0px !important;
+  border-bottom-color: transparent;
 
   &::placeholder {
     color: rgba(31, 32, 65, .75);
