Added pseudobutton-icon and material icon font refs and classes

--- a/src/components/ui-kit/input/input.pug
+++ b/src/components/ui-kit/input/input.pug
@@ -9,4 +9,5 @@ mixin inputItems( items=[] )
           p.input__textbar_state #{item.state}
       input.input__frame.elem__border( class=`${item.dropdown ? 'dropdown-is-closed' : ''}` readonly=item.dropdown ? true : false type=item.type placeholder=item.placeholder )
       if item.dropdown
+        span.material-icons-outlined.icon-location expand_more
         +dropdownItem( item.dropdown )
