--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -85,3 +85,10 @@
     border-color: rgba(31, 32, 65, .5);
   }
 }
+
+.icon-location {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: $valhalla;
+}
