--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -3,14 +3,14 @@
 .input {
   position: relative;
 
-  &__textbar{
+  &__text-bar{
     display: flex;
     justify-content: space-between;
     text-transform: uppercase;
     font-size: 12px;
     color: $valhalla;
 
-    & > p {
+    & > span {
       margin-block: 20px 5px;
     }
 
@@ -73,6 +73,10 @@
   }
 }
 
+.dropdown-marker {
+  cursor: pointer;
+}
+
 .dropdown-is-opened {
   border-radius: 4px 4px 0px 0px !important;
   border-bottom-color: transparent;
@@ -90,5 +94,8 @@
   position: absolute;
   bottom: 10px;
   right: 10px;
+  background-color: #fff;
   color: $valhalla;
+  user-select: none;
+  cursor: pointer;
 }
