Refactored input and dropdown mixins, again 3

--- a/src/components/ui-kit/colors/colors.scss
+++ b/src/components/ui-kit/colors/colors.scss
@@ -41,15 +41,15 @@
 
 .background-color {
   &_valhalla {
-    background: $valhalla;
+    background-color: $valhalla;
   }
 
   &_perfume {
-    background: $perfume;
+    background-color: $perfume;
   }
   
   &_silver-tree {
-    background: $silver-tree;
+    background-color: $silver-tree;
   }
 }
 
