--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -15,16 +15,19 @@ block content
           title: "text field",
           state: "default",
           type: "email",
-          placeholder: "Email"
+          placeholder: "Email",
+          widthkey: 100
         },
         {
           title: "text field",
           state: "hover / focus",
-          placeholder: "This is pretty awesome"
+          placeholder: "This is pretty awesome",
+          widthkey: 100
         },
         {
           title: "dropdown",
           placeholder: "Сколько гостей",
+          widthkey: 100,
           dropdown: {
             options: [
               "взрослые",
@@ -35,6 +38,37 @@ block content
         },
         {
           title: "masked text field",
-          placeholder: "ДД.ММ.ГГГГ"
+          placeholder: "ДД.ММ.ГГГГ",
+          widthkey: 100
+        },
+        {
+          title: "date dropdown",
+          placeholder: "ДД.ММ.ГГГГ",
+          widthkey: 50,
+          dropdown: {
+            options: [
+              "взрослые"
+            ]
+          }
+        },
+        {
+          title: "date dropdown",
+          placeholder: "ДД.ММ.ГГГГ",
+          widthkey: 50,
+          dropdown: {
+            options: [
+              "взрослые"
+            ]
+          }
+        },
+        {
+          title: "filter date dropdown",
+          placeholder: "19 авг - 23 авг",
+          widthkey: 75,
+          dropdown: {
+            options: [
+              "взрослые"
+            ]
+          }
         }
       ])
