Added new bold font

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -47,17 +47,17 @@ block content
           widthkey: 50,
           dropdown: {
             options: [
-              "взрослые"
+              ""
             ]
           }
         },
         {
           title: "date dropdown",
-          placeholder: "ДД.ММ.ГГГГ",
+          placeholder: "19.08.2019",
           widthkey: 50,
           dropdown: {
             options: [
-              "взрослые"
+              ""
             ]
           }
         },
@@ -67,7 +67,7 @@ block content
           widthkey: 75,
           dropdown: {
             options: [
-              "взрослые"
+              ""
             ]
           }
         }
