--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -13,7 +13,8 @@
     }
 
     &_title {
-      font-weight: 700;
+      font-family: 'Montserrat-Bold', sans-serif;
+      font-weight: bold;
     }
     
     &_state {
