--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -39,6 +39,8 @@
 
     &::placeholder {
       color: rgba(31, 32, 65, .25);
+      font-size: 16px;
+      line-height: 18px;
     }
 
     &:hover,
