Sorted out a little file hierarchy disorder

--- a/src/components/ui-kit/header/header.pug
+++ b/src/components/ui-kit/header/header.pug
@@ -1,5 +1,5 @@
 include ../../logo/logo.pug
 
 mixin headerItem()
-  header.ui-kit
+  header.ui-kit__header
     +logotype({size: "48px", opacity: .25, color: "#1F2041"})
