--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -1,7 +1,7 @@
 .ui-kit {
   &__body {
     margin: auto;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   &__main {
@@ -14,6 +14,3 @@
     height: 145px;
   }
 }
-
-
-
