Minor codestyle fixes

--- a/src/components/ui-kit/input/input.scss
+++ b/src/components/ui-kit/input/input.scss
@@ -43,6 +43,10 @@
 
     &:hover,
     &:focus-within {
+      & + span {
+        opacity: .75;
+      }
+      
       &::placeholder {
         color: rgba(31, 32, 65, .75);
       }
@@ -100,5 +104,5 @@
   right: 10px;
   z-index: -1;
   color: $valhalla;
-  opacity: .75;
+  opacity: .5;
 }
