--- a/src/styles/ui-kit-pages.scss
+++ b/src/styles/ui-kit-pages.scss
@@ -1,7 +1,7 @@
 .ui-kit {
   &__body {
     margin: auto;
-    font-family: 'Montserrat', 'Quicksand', sans-serif;
+    font-family: Montserrat, Quicksand, sans-serif;
   }
 
   &__main {
